[gd_scene load_steps=4 format=2]

[ext_resource path="res://Common/coralines-cat.regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="StartNewGame" type="Button" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 303.0
margin_bottom = 103.0
focus_mode = 0
custom_colors/font_color_focus = Color( 1, 0.501961, 0, 1 )
custom_colors/font_color = Color( 1, 0.501961, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Start new game"
flat = true

[node name="Comtinue" type="Button" parent="."]
margin_left = 64.0
margin_top = 128.0
margin_right = 192.0
margin_bottom = 167.0
focus_mode = 0
custom_colors/font_color_focus = Color( 1, 0.501961, 0, 1 )
custom_colors/font_color = Color( 1, 0.501961, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Continue"
flat = true

[node name="Exit" type="Button" parent="."]
margin_left = 64.0
margin_top = 192.0
margin_right = 129.0
margin_bottom = 231.0
focus_mode = 0
custom_colors/font_color_focus = Color( 1, 0.501961, 0, 1 )
custom_colors/font_color = Color( 1, 0.501961, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Exit"
flat = true

[connection signal="pressed" from="StartNewGame" to="." method="_on_StartNewGame_pressed"]
[connection signal="pressed" from="Comtinue" to="." method="_on_Comtinue_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
